force-app/main/default/objects/Opportunity/fields/RecurSoft__MainCompetitors__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__MainCompetitors__c</fullName>
    <label>Deprecated - Main Competitor(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>