force-app/main/default/objects/Opportunity/fields/RecurSoft__Opportunity_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Opportunity_Price__c</fullName>
    <inlineHelpText>Total price of the opportunity (sum of Subscription Total Prices).</inlineHelpText>
    <label>Opportunity Price</label>
    <summarizedField>OpportunityLineItem.RecurSoft__Subscription_Total_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>