force-app/main/default/objects/Opportunity/fields/RecurSoft__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__OrderNumber__c</fullName>
    <label>Deprecated - Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>