force-app/main/default/objects/Opportunity/fields/RecurSoft__Owner_Copy__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Owner_Copy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deprecated - Owner Copy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RecurSoft_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>