force-app/main/default/objects/Opportunity/fields/RecurSoft__Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Parent_Account_ID__c</fullName>
    <formula>Partner_Account__r.Id</formula>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>