force-app/main/default/objects/Opportunity/fields/RecurSoft__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Other (Check etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>