force-app/main/default/objects/Opportunity/fields/RecurSoft__Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Payment_Term__c</fullName>
    <formula>TEXT( RecurSoft__Bill_to_Account__r.RecurSoft__Payment_Term__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>