force-app/main/default/objects/Opportunity/fields/RecurSoft__Project_Id__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Project_Id__c</fullName>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>