force-app/main/default/objects/Opportunity/fields/RecurSoft__Renewal_Rule__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Renewal_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Determines the system behaviour at the time of renewing the subscription.</inlineHelpText>
    <label>Renewal Rule</label>
    <referenceTo>RecurSoft__Renewal_Rule__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>RecurSoft_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>