force-app/main/default/objects/Opportunity/fields/RecurSoft__Secondary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Secondary_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deprecated - Secondary Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>RecurSoft_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>