force-app/main/default/objects/Opportunity/fields/RecurSoft__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecurSoft__Bill_to_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Ship to Contact)</relationshipLabel>
    <relationshipName>RecurSoft_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>