force-app/main/default/objects/Opportunity/fields/RecurSoft__Signed_Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Signed_Contract_URL__c</fullName>
    <label>Signed Contract URL</label>
    <type>Url</type>
</CustomField>