force-app/main/default/objects/Opportunity/fields/RecurSoft__Source_subscription_termination_date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Source_subscription_termination_date__c</fullName>
    <inlineHelpText>Terminated subscription, replaced by an addendum opportunity.</inlineHelpText>
    <label>Source subscription termination date</label>
    <type>Date</type>
</CustomField>