force-app/main/default/objects/Opportunity/fields/RecurSoft__Total_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Total_Contract_Term__c</fullName>
    <formula>IF(OR(ISPICKVAL( RecurSoft__Free_Months_Setting__c , &quot;Extend Contract - At the Beginning&quot;), 
      ISPICKVAL( RecurSoft__Free_Months_Setting__c , &quot;Extend Contract - At the End&quot;) ), 

VALUE(TEXT(RecurSoft__Initial_Contract_Term__c)) +  VALUE(TEXT(RecurSoft__Number_of_Free_Months__c)), 

RecurSoft__Initial_Contract_Term__c )</formula>
    <label>Total Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>