force-app/main/default/objects/Opportunity/fields/RecurSoft__Total_Contract_Term_Text__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Total_Contract_Term_Text__c</fullName>
    <inlineHelpText>Contract term inclusive of free months.</inlineHelpText>
    <label>Total Contract Term</label>
    <length>13</length>
    <type>Text</type>
</CustomField>