force-app/main/default/objects/Opportunity/fields/RecurSoft__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__TrackingNumber__c</fullName>
    <label>Deprecated - Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>