force-app/main/default/objects/Opportunity/fields/RecurSoft__Trial__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Trial__c</fullName>
    <description>Trial Period in Days.</description>
    <inlineHelpText>Period during which contracts can be cancelled without penalties.</inlineHelpText>
    <label>Trial Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Waived</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>