force-app/main/default/objects/Opportunity/fields/RecurSoft__Trial_End_Date1__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Trial_End_Date1__c</fullName>
    <formula>IF(ISBLANK( RecurSoft__Trial_Start_Date__c ), RecurSoft__Trial_Start_Date__c,  
    IF(ISPICKVAL(RecurSoft__Trial__c, &quot;&quot;), NULL, 
 IF(ISPICKVAL(RecurSoft__Trial__c, &quot;0 - Waived&quot;), NULL, RecurSoft__Trial_Start_Date__c +  VALUE (TEXT(RecurSoft__Trial__c ))) ))</formula>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>