force-app/main/default/objects/Opportunity/fields/RecurSoft__Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Trial_Start_Date__c</fullName>
    <formula>IF ( ISPICKVAL(RecurSoft__Trial__c, &quot;&quot;) || ISPICKVAL(RecurSoft__Trial__c, &quot;0 - Waived&quot;) , NULL, RecurSoft__Contract_Term_Start_Date__c)</formula>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>