force-app/main/default/objects/Opportunity/fields/Referral_Bonus_Paid__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bonus_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Bonus Paid</label>
    <type>Checkbox</type>
</CustomField>