force-app/main/default/objects/Opportunity/fields/Referred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Contact that was referred by an Ambassador</description>
    <label>Referred Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Referred Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>