force-app/main/default/objects/Opportunity/fields/Requires_add_l_Integration__c.field-meta.xml
<CustomField>
    <fullName>Requires_add_l_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires add&#39;l Integration</label>
    <type>Checkbox</type>
</CustomField>