force-app/main/default/objects/Opportunity/fields/Retention_Cancel_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Retention_Cancel_Request_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Date the office requested to cancel</inlineHelpText>
    <label>Retention Cancel Request Date</label>
    <type>Date</type>
</CustomField>