force-app/main/default/objects/Opportunity/fields/Retention_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Retention_Lead_Source__c</fullName>
    <label>Retention Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>