force-app/main/default/objects/Opportunity/fields/Retention_Stage__c.field-meta.xml
<CustomField>
    <fullName>Retention_Stage__c</fullName>
    <description>Storing Retention Cases Stage</description>
    <label>Retention Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Made Contact</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
            <value>
                <fullName>Resolving Issues</fullName>
            </value>
            <value>
                <fullName>Made Offer</fullName>
            </value>
            <value>
                <fullName>Sent Addendum</fullName>
            </value>
            <value>
                <fullName>Offer Rejected</fullName>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>