force-app/main/default/objects/Opportunity/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <description>The sales engineer that completed the required call.</description>
    <label>Sales Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Michael Bellon</fullName>
            </value>
            <value>
                <fullName>Ruben Popoca</fullName>
            </value>
            <value>
                <fullName>Travis Taylor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>