force-app/main/default/objects/Opportunity/fields/Sales_Engineer_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Call_Result__c</fullName>
    <label>Sales Engineer Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>