force-app/main/default/objects/Opportunity/fields/Sales_Engineer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Notes__c</fullName>
    <description>Any notes from the Sales Engineer required call.</description>
    <label>Sales Engineer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>