force-app/main/default/objects/Opportunity/fields/Sales_Error__c.field-meta.xml
<CustomField>
    <fullName>Sales_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Error</label>
    <type>Checkbox</type>
</CustomField>