force-app/main/default/objects/Opportunity/fields/Sales_Path__c.field-meta.xml
<CustomField>
    <fullName>Sales_Path__c</fullName>
    <label>Sales Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESR closed sale from lead generated from an OSR Trade Show in the last 60 days</fullName>
            </value>
            <value>
                <fullName>ESR closed sale given from an ISR in the last 45 days</fullName>
            </value>
            <value>
                <fullName>ESR closed sale that had been worked by an ISR in the last 45 days and was not given the lead</fullName>
            </value>
            <value>
                <fullName>ESR closed sale that had no other communication in the last 45 days</fullName>
            </value>
            <value>
                <fullName>ESR closed sale that was found at an ESR Trade Show/ Study Group/ CE Event</fullName>
            </value>
            <value>
                <fullName>ESR closed sale that was given to them and was being worked by an OSR AND ISR in the last 60 days</fullName>
            </value>
            <value>
                <fullName>ESR closed sale working with an ISR</fullName>
            </value>
            <value>
                <fullName>ISR closed sale that had communication with an ESR in the last 45 days and was not given the lead</fullName>
            </value>
            <value>
                <fullName>ISR closed sale that had no other communication in the last 45 days</fullName>
            </value>
            <value>
                <fullName>ISR closed sale that was generated at an OSR trade show in the last 60 days</fullName>
            </value>
            <value>
                <fullName>ISR closed sale that was given to them by an OSR and ESR in the last 45 days</fullName>
            </value>
            <value>
                <fullName>ISR closed sale working with an ESR</fullName>
            </value>
            <value>
                <fullName>OSR closed sale after a Trade Show</fullName>
            </value>
            <value>
                <fullName>OSR closed sale that had communication with an ESR and ISR in the last 45 days</fullName>
            </value>
            <value>
                <fullName>OSR closed sale that had communication with an ESR in the last 45 days</fullName>
            </value>
            <value>
                <fullName>OSR closed sale that had communication with an ISR in the last 45 days</fullName>
            </value>
            <value>
                <fullName>OSR closed sale that had no communication in the last 45 days</fullName>
            </value>
            <value>
                <fullName>ISR closed sale that was generated at an ESR trade show in the last 45 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>