force-app/main/default/objects/Opportunity/fields/Sales_Rep_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Target</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>