force-app/main/default/objects/Opportunity/fields/Save_MSF__c.field-meta.xml
<CustomField>
    <fullName>Save_MSF__c</fullName>
    <description>Sugar Field for Save Opportunity</description>
    <label>Save MSF</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>