force-app/main/default/objects/Opportunity/fields/Sertifi2_0__Email__c.field-meta.xml
<CustomField>
    <fullName>Sertifi2_0__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>