force-app/main/default/objects/Opportunity/fields/Set_Product_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Set_Product_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Product Approvals</label>
    <type>Checkbox</type>
</CustomField>