force-app/main/default/objects/Opportunity/fields/SforceKey__c.field-meta.xml
<CustomField>
    <fullName>SforceKey__c</fullName>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SforceKey</label>
    <type>Text</type>
</CustomField>