force-app/main/default/objects/Opportunity/fields/SFPrice__c.field-meta.xml
<CustomField>
    <fullName>SFPrice__c</fullName>
    <label>Set-up Fee</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Formula__c</field>
        <operation>equals</operation>
        <value>4000</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>