force-app/main/default/objects/Opportunity/fields/Source_User__c.field-meta.xml
<CustomField>
    <fullName>Source_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the User that created the record.  May be different than CreatedBy because of automations.  Set via Apex.</description>
    <label>Source User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>