force-app/main/default/objects/Opportunity/fields/Source_User_Manager__c.field-meta.xml
<CustomField>
    <fullName>Source_User_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Manager of the User that created the record at the time of creation.  May be different than CreatedBy.Manager because of automations.  Set via Apex.</description>
    <label>Source User Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>