force-app/main/default/objects/Opportunity/fields/Source_User_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_User_Role_Id__c</fullName>
    <description>Identifies the Role of the User that created the record at the time of creation.  May be different than CreatedBy.UserRoleId because of automations.  Set via Apex.</description>
    <label>Source User Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>