force-app/main/default/objects/Opportunity/fields/Source_User_VP__c.field-meta.xml
<CustomField>
    <fullName>Source_User_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the VP of the User that created the record at the time of creation.  May be different than CreatedBy.Manager.Manager because of automations.  Set via Apex.</description>
    <label>Source User VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_VP</relationshipName>
    <type>Lookup</type>
</CustomField>