force-app/main/default/objects/Opportunity/fields/Specific_reasons_for_unavailable_current__c.field-meta.xml
<CustomField>
    <fullName>Specific_reasons_for_unavailable_current__c</fullName>
    <label>Specific reasons for unavailable/current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>