force-app/main/default/objects/Opportunity/fields/Split_Determined__c.field-meta.xml
<CustomField>
    <fullName>Split_Determined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a split has previously been determined for this opportunity.</description>
    <inlineHelpText>Indicates whether a split has previously been determined for this opportunity.</inlineHelpText>
    <label>Split Determined</label>
    <type>Checkbox</type>
</CustomField>