force-app/main/default/objects/Opportunity/fields/SR_Cancel_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>SR_Cancel_Request_Status__c</fullName>
    <label>SR Cancel Request Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>