force-app/main/default/objects/Opportunity/fields/SR_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>SR_Date_Created__c</fullName>
    <description>This is the date the Opportunity was actually created. If migrated from Sugar, this is the Sugar created date. If not, it matches the CreatedDate.</description>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>