force-app/main/default/objects/Opportunity/fields/SR_Lead_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>SR_Lead_Date_Created__c</fullName>
    <label>Lead Date Created</label>
    <type>DateTime</type>
</CustomField>