force-app/main/default/objects/Opportunity/fields/SRC_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>SRC_Monthly_Revenue__c</fullName>
    <description>Rollup of the SRC Monthly Revenue field on the Opp Products.  This will rollup to the Sales Credit and Sales Targets</description>
    <label>SRC Monthly Revenue</label>
    <summarizedField>OpportunityLineItem.SRC_Monthly_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Monthly__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>