force-app/main/default/objects/Opportunity/fields/SRSR_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>SRSR_Monthly_Revenue__c</fullName>
    <description>This will rollup the SRSR Monthly Revenue field from the Opp Product.  This will also rollup to the Sales Credit and Sales Targets.</description>
    <label>SRSR Monthly Revenue</label>
    <summarizedField>OpportunityLineItem.SRSR_Monthly_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Monthly__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>