force-app/main/default/objects/Opportunity/fields/Stage_Before_Close__c.field-meta.xml
<CustomField>
    <fullName>Stage_Before_Close__c</fullName>
    <description>The Opportunity Stage before changing to a Closed type stage</description>
    <label>Stage Before Close</label>
    <length>100</length>
    <type>Text</type>
</CustomField>